# build-vnf

./: .gdb_history  .gitignore  .pylint  .shellcheckrc  .travis.yml  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  Makefile  README.md  TESTBED.md  TODO.md  VERSION.md  Vagrantfile  Wiki.md  bootstrap.sh  install_vagrant_plugins.sh  note.md  problem_formulation.tex  references.md  requirements.txt  resources.md
CALVIN/: README.md
calvin-faas/ffpp/user/: Makefile  make.sh  meson.build  meson_options.txt
coin_dl/: .dockerignore  Dockerfile  Makefile  README.md  build_image.sh  client.py  coin_dl.cpp  coin_dl.py  comnetsemu_dev.py  detector.py  dumbbell.json  dumbbell.py  dumbbell_controller.py  environment.yml  feature_map.py  fix_ryu.sh  log.py  meson.build  multi_hop_controller.py  pktgen.py  plot_latency.py  plot_latency_ref.py  preprocessor.py  read_conda_size.py  rtp.py  run_sockperf.py  run_sockperf_ref.py  server.py  topology.py
coin_yolo/: Dockerfile  Makefile  README.md  build_image.sh  client.py  coin_yolo.cpp  comnetsemu_dev.py  config.py  detector.py  environment.yml  ffpp_config.yaml  header.py  meson.build  plot_latency.py  requirements.txt  rtp.py  rtp_packet.py  run_sockperf.py  server.py  setup_always.sh  test.yml  topology.py
dpdk/codpdk/: CMakeLists.txt
dpdk/codpdk/include/: ncdpdk.h
ffpp/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.experimental  Makefile  README.md  build.sh  build_image.sh  build_image_dev.sh  cli_howto.md  comnetsemu_dev.py  config  lib.mk  meson.build  meson_options.txt  reference.md
ffpp/benchmark/: Dockerfile  README.md  benchmark.cpp  benchmark_cnf.yaml  benchmark_config.yaml  benchmark_data_processor.cpp  benchmark_embeded_py.cpp  benchmark_io.cpp  benchmark_packet_processing.cpp  benchmark_packet_processor.cpp  benchmark_reassembler.cpp  build.sh  chain.py  meson.build  powertop.py  setup.sh
ffpp/benchmark/ebpf_map/: ebpf_map_rw_latency.cpp  ebpf_map_rw_latency.py  meson.build
ffpp/benchmark/trex/: run_stateless_test.py  stf_path.py  stl_on_off.py  stl_test_burst.py  stl_test_scale.py  stl_traffic_models.py  trex_cfg.yaml  trex_cfg_hw.yaml
ffpp/benchmark/turbostat/: get_cpu_freq.sh  turbostat.py  turbostat.sh  turbostat_switch.py  turbostat_switch.sh
ffpp/bindings/: meson.build
ffpp/bindings/python/: bindings.cpp  meson.build
ffpp/configs/dpdk/: meson_options.txt
ffpp/docs/: Doxyfile
ffpp/docs/html/: annotated.html  classes.html  collections_8c_source.html  collections_8h.html  collections_8h_source.html  config_8h.html  config_8h_source.html  device_8c_source.html  device_8h.html  device_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a67f4f75f4774864f20e27b93907bb1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  flow_8c_source.html  flow_8h.html  flow_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  handler_8h.html  handler_8h_source.html  index.html  io_8c_source.html  io_8h.html  io_8h_source.html  ipc_8c_source.html  ipc_8h.html  ipc_8h_source.html  md_README.html  memory_8c_source.html  memory_8h_source.html  menudata.js  mp_8c_source.html  mp_8h_source.html  pages.html  (+16 more)
ffpp/emulation/munf/: emu_munf.py
ffpp/examples/: meson.build
ffpp/examples/2_vnf_manager/: main.c  meson.build  run.sh
ffpp/examples/c1_manager/: main.c
ffpp/examples/embedding_python/: cnf.yaml  main.cpp  meson.build  test.py
ffpp/examples/feedback_manager/: main.c  meson.build
ffpp/examples/frequency_switcher/: main.c
ffpp/examples/latency_benchmark_local/: Makefile  latency_benchmark_local.c  uds_client.py  uds_server.py
ffpp/examples/multi_appcontainers/: distributor.c  dummy_vnf.c  run.sh  topo.py
ffpp/examples/traffic_monitor/: main.c
ffpp/ffpp-go/: go.mod
ffpp/ffpp-py/: ffpp.py  ffpp_builder.py  setup.py
ffpp/include/: meson.build
ffpp/include/ffpp/: adu_processor.hpp  bpf_defines_user.h  bpf_helpers_user.h  cnf.hpp  collections.h  config.h  data_processor.hpp  ffpp.hpp  general_helpers_user.h  graph.hpp  io.h  ipc.h  mbuf_helpers.hpp  mbuf_pdu.hpp  mp.h  packet_engine.hpp  packet_ring.hpp  private.h  rtp.hpp  rtp_reassembler.hpp  scaling_defines_user.h  scaling_helpers_user.h
ffpp/kern/: Makefile
ffpp/kern/af_xdp_dpdk/: Makefile  af_xdp_dpdk_kern.c  af_xdp_dpdk_user.c
ffpp/kern/common/: Makefile  common_defines.h  ext_xdp_user_utils.c  ext_xdp_user_utils.h
ffpp/kern/xdp_count/: xdp_count_kern.c  xdp_count_loader.c
ffpp/kern/xdp_drop/: load_xdp.sh  xdp_drop_kern.c
ffpp/kern/xdp_fwd/: README.md  xdp_fwd_fb_kern.c  xdp_fwd_kern.c  xdp_fwd_loader.c  xdp_fwd_time_kern.c  xdp_fwd_user.c
ffpp/kern/xdp_fwd_two_vnf/: xdp_fwd_fb_kern.c  xdp_fwd_kern.c  xdp_fwd_time_kern.c  xdp_fwd_user.c
ffpp/kern/xdp_pass/: Makefile  xdp_pass_kern.c
ffpp/kern/xdp_time/: common_kern_user.h  xdp_time_kern.c  xdp_time_user.c
ffpp/kernel/: meson.build
ffpp/kernel/common/: ext_xdp_user_utils.c
ffpp/mk/: dev.mk  static_check.mk
ffpp/protobuf/: ffpp_msg.proto
ffpp/pyffpp/: ffpp_builder.py  pyffpp.py  setup.py
ffpp/related_works/: meson.build
ffpp/scripts/: cat_trace_buf.sh  install_valgrind.sh  power_manager.py  run_testpmd.py  setup_devtools.sh  uninstall_ninja.sh  vnf.py
ffpp/src/: bpf_helpers_user.c  cnf.cpp  data_processor.cpp  device.c  general_helpers_user.c  graph.cpp  io.c  ipc.c  mbuf_helpers.cpp  mbuf_pdu.cpp  memory.c  meson.build  mp.c  packet_engine.cpp  packet_ring.cpp  packet_vector.cpp  rtp.cpp  scaling_helpers_user.c  task.c  utils.c  utils.cpp
ffpp/tests/: Makefile  distributor_proc.c  meson.build  run_tests.py  test_icmp.c  test_l2_fwd.c  test_mp.c  test_ring.c  test_setup.h
ffpp/user/: Makefile  build.sh  meson.build  meson_options.txt
ffpp/util/: benchmark-local.py  ffpp-dev.py  mini-env.sh  power_manager.py  run_dev_container.py  setup_devtools.sh  setup_host_os.sh  setup_test.sh  setup_vfio.sh  tmux.sh  vnf.py
ffpp/utils/: run_dpdk_l2fwd_af_xdp_hw.sh  setup_devtools.sh  setup_host_os.sh  setup_test.sh
(+874 files in other folders)
