option('examples', type: 'boolean', value: false,
	description: 'Build built-in examples.')

option('tests', type: 'boolean', value: false,
	description: 'Build tests.')

option('related_works', type: 'boolean', value: false,
	description: 'Build related works for comparison (used for paper publication).')

# TODO
option('ffpppy', type: 'boolean', value: true,
	description: 'Build Python bindings (WIP).')