option('examples', type: 'boolean', value: true,
  description: 'Build all built-in examples.')

option('tests', type: 'boolean', value: true,
  description: 'Build all tests.')

option('related_works', type: 'boolean', value: true,
  description: 'Build all related works (It is used to reproduce the results of some papers without open source code. The main purpose is to compare andpublish papers).')
