benchmark_io_exe = executable('benchmark_io',
  sources: ['benchmark_io.cpp'],
  include_directories: inc,
  dependencies: [ffpp_deps], link_with: [ffpplib_shared])

benchmark_packet_processing_exe = executable('benchmark_packet_processing',
  sources: ['benchmark_packet_processing.cpp'],
  include_directories: inc,
  dependencies: [ffpp_deps], link_with: [ffpplib_shared])

benchmark_reassembler_exe = executable('benchmark_reassembler',
  sources: ['benchmark_reassembler.cpp'],
  include_directories: inc,
  dependencies: [ffpp_deps], link_with: [ffpplib_shared])

benchmark_data_processor_exe = executable('benchmark_data_processor',
  sources: ['benchmark_data_processor.cpp'],
  include_directories: inc,
  dependencies: [ffpp_deps], link_with: [ffpplib_shared])
