ffpp_headers = files(
  'ffpp/aes.h',
  'ffpp/bpf_defines_user.h',
  'ffpp/bpf_helpers_user.h',
  'ffpp/collections.h',
  'ffpp/config.h',
  'ffpp/device.h',
  'ffpp/general_helpers_user.h',
  'ffpp/general_helpers_user.h',
  'ffpp/global_stats_user.h',
  'ffpp/global_stats_user.h',
  'ffpp/io.h',
  'ffpp/memory.h',
  'ffpp/munf.h',
  'ffpp/mvec.h',
  'ffpp/packet_processors.h',
  'ffpp/scaling_defines_user.h',
  'ffpp/scaling_helpers_user.h',
  'ffpp/task.h',
  'ffpp/utils.h',
)

install_headers(ffpp_headers, subdir: 'ffpp')
